remove rating from favs

--- a/restaurants/templates/restaurants/favorites.html
+++ b/restaurants/templates/restaurants/favorites.html
@@ -40,7 +40,7 @@
                 <div class="favorite-item">
                     <div class="favorite-details">
                         <h3>{{ favorite.restaurant.name }}</h3>
-                        <p>Rating: {{ favorite.restaurant.rating }}</p>
+                        <!-- <p>Rating: {{ favorite.restaurant.rating }}</p> -->
                         <p>Cuisine: {{ favorite.restaurant.cuisine_type }}</p>
                     </div>
                     <!-- <button onclick="removeFavorite('{{ favorite.restaurant.name }}')">Remove</button> -->
